<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_background2"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/docscan"
        android:textSize="25sp"
        android:fontFamily="@font/kavoon_regular"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"

        android:drawableLeft="@drawable/username2"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:password="true"
        android:layout_marginTop="20dp"

        android:drawableLeft="@drawable/password3"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="206dp"
        android:layout_height="40dp"
        android:password="true"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/password3"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/register_button"
        android:text="@string/register"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#000000"
            android:text="@string/already_registered"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#00008B"
            android:textSize="16sp"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>