<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="@drawable/home_background"
    android:gravity="center_horizontal">


    <!-- This holds the logo of our app-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo"/>

    <!-- This is the title of our app-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/docscan"
        android:fontFamily="@font/kavoon_regular"
        android:textSize="25sp"
        android:layout_marginBottom="25dp"/>

    <!-- The  two editTexts below will allow the user
    to enter both the username and password-->
        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:drawableLeft="@drawable/username2"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="190dp"
            android:password="true"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/password3"
            android:hint="@string/password"/>


    <!-- The login Button will launch the new activity-->
    <Button
        android:id="@+id/button_login"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button3"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <!-- The new linear layout will hold the
    text and an onClick listener for the user to register
    in a horizontal orientation-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#000000"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#424242"
            android:textSize="16sp"
            android:text="@string/register"/>

    </LinearLayout>
</LinearLayout>